# ai-apl-4bit-ftp-interpreter-called-duck-AI

./: .gitignore  CMakeLists.txt  README.md  launcher.py  prototype.py  requirements.txt  setup.py  test_gradio.py  test_interpreter.py
include/: tensor.h
models/: README.md  demo.apl
scripts/: build_exe.py  convert_model.py  quick_run.py
src/: interpreter.py  main.cpp  tensor.cpp  ui.py  web_ui.py
src/backend/: quantization.cpp
tests/: test_tensor.cpp
